--- a/src/main/resources/static/css/timetable.css
+++ b/src/main/resources/static/css/timetable.css
@@ -68,7 +68,7 @@
     border-bottom-right-radius: 20px;
 }
 
-.studtableStyle td,
+/*.studtableStyle td,*/
 .studtableStyle tbody tr:before {
     padding: .1em .5em;
     border: 1px solid #E7D5C0;
@@ -87,9 +87,9 @@
 
 .timetableStyle tr{
 
-    background-color: crimson;
+    /*background-color: crimson;*/
     border-radius: 15px;
-    height: 300px;
+    height: 200px;
 }
 
 
@@ -107,16 +107,20 @@
     width: 100px;
     height: 40px;
 }
+.timetableStyle span {
+    margin-left: 0px;
+}
 
 .day {
-    padding: 0px; 
-    margin-right: 10px;
+    padding: 0px;
+    margin-right: 12px;
     margin-top: 35px;
     border: 1px solid #fff; 
     background-color: darkkhaki;
     border-radius: 10px;
     /*min-height: calc( ((100vw - 480px)/(1280 - 480) * (24 - 16) + 16px)*8);*/
     min-height: 180px;
+    max-height: 250px;
     /*min-width: calc( ((100vw - 480px)/(1280 - 480) * (24 - 16) + 16px)*7.5);*/
     /*max-width: auto;*/
     min-width: 180px;
@@ -133,7 +137,7 @@
 
 .dayName{
     background-color:floralwhite;
-    font-weight: 550;
+    font-weight: 600;
     width: 40px;
     height: 20px;
     padding: 5px;
@@ -154,16 +158,17 @@
 
 .day li, span{
     max-height: 60px;
+    /*padding-right: 25px;*/
     /*font-size: 13pt;*/
     /*font-size: calc( (100vw - Vmin)/(Vmax - Vmin) * (Fmax - Fmin) + Fmin);*/
     max-font-size: calc( ((100vw - 480px)/(1280 - 480) * (24 - 16) + 16px)*0.8);
     min-font-size: 20px;
     list-style-type: none;
-    padding: 0 2px;
     white-space: nowrap; /* Запрещаем перенос строк */
     overflow: hidden; /* Обрезаем все, что не помещается в область */
     text-overflow: ellipsis; /* Добавляем многоточие */
 }
+
 .week-number-cell{
     /*background-color:;*/
     display: block;
@@ -175,21 +180,38 @@
     -ms-transform: rotate(-90deg);
     -o-transform: rotate(-90deg);
     transform: rotate(-90deg);
+
+    margin-left: -65px;
+    max-height:20px;
+    min-height:20px;
+    min-width:130px;
+    min-width:130px;
     font-size: 15pt;
     white-space: nowrap; /* Запрещаем перенос строк */
-    overflow: hidden; /* Обрезаем все, что не помещается в область */
+    /*overflow: hidden; !* Обрезаем все, что не помещается в область *!*/
     padding: 5px; /* Поля вокруг текста */
     text-overflow: ellipsis; /* Добавляем многоточие */
 }
 
 .day ul{
     margin-top: 5px;
+    margin-left: -10px;
     padding-left: 8px;
 }
 
 .day ul li{
     margin-top: 5px;
 }
+
+.day h4{
+    margin-top: -25px;
+    margin-left: 5px;
+}
+
+.day caption {
+    margin-left: 30px;
+}
+
 
 .days {
     margin-bottom: 50px;
