--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -41,7 +41,7 @@
 
 .header{
     position: relative;
-    margin-left: auto;
+    margin-left: 170;
     justify-content: center;
-    font-size:32
+    font-size: 32
 }
