--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -41,7 +41,11 @@
 
 .header{
     position: relative;
-    margin-left: 170;
+    margin-left: 167px;
     justify-content: center;
-    font-size: 32
+    font-size: 32px
+}
+
+.errorMessage{
+    color: red;
 }
