--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -34,15 +34,16 @@
 }
 
 .loginBlock{
-/*    text-align: center;*/
-/*    width: 50%;*/
-/*    display: inline-block;*/
+    margin: 0 auto;
+    width: 500px;
+    background: #8ED9B6;
 }
 
 .header{
-    position: relative;
-    margin-left: 167px;
-    justify-content: center;
+    /*position: relative;*/
+    margin: 0 auto;
+    /*margin-left: 167px;*/
+    /*justify-content: center;*/
     font-size: 32px
 }
 
