--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -1,58 +1,117 @@
 /* app css stylesheet */
 
-.menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
-}
-
-.menu:before {
-  content: "[";
-}
-
-.menu:after {
-  content: "]";
-}
-
-.menu > li {
-  display: inline;
-}
-
-.menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
-}
-
-.menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
-}
-
 .outer {
-    width: 200px;
-    height: 200px;
-    text-align: center;
+    display: inline-block;
+    height: 100%;
+    width: 100%;
     vertical-align: middle;
     background-color: #ffc;
 }
 
-.loginBlock{
-    margin: 0 auto;
-    width: 500px;
+.loginBlock {
+    vertical-align: middle;
+    text-align: center;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 550;
+    height: 200;
     background: #8ED9B6;
-    display: inline-block;
-    height: 100px;
-}
-.header{
-/*position: relative;*/
-margin: 0 auto;
-/*margin-left: 167px;*/
-/*justify-content: center;*/
-font-size: 32px
+    border-radius: 10px;
 }
 
+.centerBlock {
+    text-align: center;
+    background: #8ED9B6;
 
-.errorMessage{
+}
+
+.header {
+    margin: 0 auto;
+    font-size: 32px;
+    font-style: inherit;
+}
+
+.errorMessage {
     color: red;
+}
+
+.button {
+    width: 250px;
+    height: 30px;
+    text-decoration: none;
+    padding-top: 2px;
+    color: #a675b3;
+    text-align: center;
+    line-height: 30px;
+    display: block;
+    margin: 20px auto;
+    font: normal 15px arial;
+}
+
+.absolute-aligned {
+    position: relative;
+    min-height: 500px;
+    background: hsl(200, 100%, 97%);
+}
+
+.absolute-aligned img {
+    width: 50%;
+    min-width: 200px;
+    height: auto;
+    overflow: auto;
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
+
+.button1 {
+    border-radius: 6px;
+    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.08);
+    -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.08);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.08);
+    color: #fff;
+    display: block;
+    width: 200px;
+    height: 50px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
+    padding: 5px 5px;
+    margin: 20px auto;
+    text-decoration: none;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
+    -webkit-transition: background-color 0.1s linear;
+    -moz-transition: background-color 0.1s linear;
+    -o-transition: background-color 0.1s linear;
+    transition: background-color 0.1s linear;
+    background-color: rgb( 43, 153, 91);
+    border: 1px solid rgb( 33, 126, 74);
+}
+
+.button1:hover {
+    background-color: rgb( 75, 183, 141);
+}
+
+.button:not(.active) {
+    box-shadow: inset 0 1px 1px rgba(111, 55, 125, 0.8), inset 0 -1px 0px rgba(63, 59, 113, 0.2), 0 9px 16px 0 rgba(0, 0, 0, 0.3), 0 4px 3px 0 rgba(0, 0, 0, 0.3), 0 0 0 1px #150a1e;
+    background-image: linear-gradient(#3b2751, #271739);
+    text-shadow: 0 0 21px rgba(223, 206, 228, 0.5), 0 -1px 0 #311d47;
+}
+
+.button:not(.active):hover,
+.button:not(.active):focus {
+    transition: color 200ms linear, text-shadow 500ms linear;
+    color: #fff;
+    text-shadow: 0 0 21px rgba(223, 206, 228, 0.5), 0 0 10px rgba(223, 206, 228, 0.4), 0 0 2px #2a153c;
+}
+
+.button:not(:hover) {
+    transition: 0.6s;
 }
