--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,43 +8,36 @@
     <title>Time For Study</title>
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/app.css" /> </head>
+
 <body>
-<form class="form-horizontal" role="form" ng-controller="loginController">
-    <div class="loginBlock">
-        <span class="header">Time For Study</span>
+<form role="form" ng-controller="loginController">
+    <div class="loginBlock"> <span class="header">Time For Study</span>
         <div class="form-group">
             <label id="phoneLabel" for="inputPhone" class="col-sm-2 control-label">Телефон:</label>
             <div class="col-sm-4">
-                <input class="form-control" id="inputPhone" placeholder="Phone 7xxxxxxxxxx" ng-model="formInfo.Phone" [(ngModel)]="bill.amount" #amount="ngModel" max="11" required> </div>
-            <span class="errorMessage" ng-show="postResultMessage">{{postResultMessage}}</span>
-        </div>
+                <input class="form-control" id="inputPhone" placeholder="Phone 7xxxxxxxxxx" ng-model="formInfo.Phone" [(ngModel)]="bill.amount" #amount="ngModel" max="11" required> </div> <span class="errorMessage" ng-show="postResultMessage">{{postResultMessage}}</span> </div>
         <div class="form-group" ng-show="enterCode">
             <label id="codeLabel" for="inputPhone" class="col-sm-2 control-label">Код из смс:</label>
             <div class="col-sm-4">
-                <input class="form-control" id="inputCode" placeholder="" ng-model="formInfo.Code" [(ngModel)]="bill.amount" #amount="ngModel" max="11" required> </div> <span ng-show="phoneRequired">{{phoneRequired}}</span>
-        </div>
+                <input class="form-control" id="inputCode" placeholder="" ng-model="formInfo.Code" [(ngModel)]="bill.amount" #amount="ngModel" max="11" required> </div> <span ng-show="phoneRequired">{{phoneRequired}}</span> </div>
         <div class="form-group" ng-show="registartionFields">
             <label id="nameLabel" for="inputPhone" class="col-sm-2 control-label">ФИО:</label>
             <div class="col-sm-4">
-                <input class="form-control" id="inputName" placeholder="" ng-model="formInfo.Code" [(ngModel)]="bill.amount" #amount="ngModel" max="11" required> </div> <span ng-show="phoneRequired">{{phoneRequired}}</span>
-        </div>
+                <input class="form-control" id="inputName" placeholder="" ng-model="formInfo.Code" [(ngModel)]="bill.amount" #amount="ngModel" max="11" required> </div> <span ng-show="phoneRequired">{{phoneRequired}}</span> </div>
         <div class="form-group" ng-show="registartionFields">
             <label id="groupLabel" for="inputPhone" class="col-sm-2 control-label">Код из смс:</label>
             <div class="col-sm-4">
-                <input class="form-control" id="inputGroup" placeholder="" ng-model="formInfo.Code" [(ngModel)]="bill.amount" #amount="ngModel" max="11" required> </div> <span ng-show="phoneRequired">{{phoneRequired}}</span>
-        </div>
+                <input class="form-control" id="inputGroup" placeholder="" ng-model="formInfo.Code" [(ngModel)]="bill.amount" #amount="ngModel" max="11" required> </div> <span ng-show="phoneRequired">{{phoneRequired}}</span> </div>
         <div class="form-group" ng-show="openRegistrationButton">
-            <label class="col-sm-2 control-label"></label>
+            <label class="col-sm-2 control-label"> </label>
             <div class="col-sm-4">
-            <button type="button" ng-click="registrateOpen()" class="btn btn-success">Зарегистрироваться</button>
+                <button type="button" ng-click="registrateOpen()" class="btn btn-success">Зарегистрироваться</button>
             </div>
         </div>
         <div class="form-group" ng-show="enterLogin">
-            <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" ng-click="login()" class="btn btn-success">{{buttonLabel}}</button>
-            </div>
+            <label class="col-sm-2 control-label"> </label>
+            <button class="button1" type="submit" ng-click="login()">{{buttonLabel}}</button>
         </div>
-
     </div>
 </form>
 <script src="lib/common/jquery.min.js"></script>
