--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -1,6 +1,8 @@
 /* app css stylesheet */
 
 .outer {
+    /*position: relative;*/
+    /*    content: '';*/
     display: inline-block;
     height: 100%;
     width: 100%;
@@ -17,58 +19,28 @@
     position: absolute;
     top: 0;
     right: 0;
-    width: 550;
-    height: 200;
+    width: 550px;
+    height: 200px;
     background: #8ED9B6;
     border-radius: 10px;
 }
 
 .centerBlock {
     text-align: center;
-    background: #8ED9B6;
-
+    /*    background: #8ED9B6;*/
 }
 
 .header {
-    margin: 0 auto;
-    font-size: 32px;
-    font-style: inherit;
+    font-family: "Arial", Georgia, Serif;
+    font-weight: 600;
+    font-size: 40px;
+    margin: 10px auto;
+    text-align: center;
 }
 
 .errorMessage {
     color: red;
-}
-
-.button {
-    width: 250px;
-    height: 30px;
-    text-decoration: none;
-    padding-top: 2px;
-    color: #a675b3;
-    text-align: center;
-    line-height: 30px;
-    display: block;
-    margin: 20px auto;
-    font: normal 15px arial;
-}
-
-.absolute-aligned {
-    position: relative;
-    min-height: 500px;
-    background: hsl(200, 100%, 97%);
-}
-
-.absolute-aligned img {
-    width: 50%;
-    min-width: 200px;
-    height: auto;
-    overflow: auto;
-    margin: auto;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+    font-size: 10px;
 }
 
 .button1 {
@@ -79,12 +51,12 @@
     color: #fff;
     display: block;
     width: 200px;
-    height: 50px;
+    height: 40px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 13px;
-    padding: 5px 5px;
-    margin: 20px auto;
+    font-size: 15px;
+    padding: 0px 0px;
+    margin: 2px auto;
     text-decoration: none;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
     -webkit-transition: background-color 0.1s linear;
@@ -99,19 +71,42 @@
     background-color: rgb( 75, 183, 141);
 }
 
-.button:not(.active) {
-    box-shadow: inset 0 1px 1px rgba(111, 55, 125, 0.8), inset 0 -1px 0px rgba(63, 59, 113, 0.2), 0 9px 16px 0 rgba(0, 0, 0, 0.3), 0 4px 3px 0 rgba(0, 0, 0, 0.3), 0 0 0 1px #150a1e;
-    background-image: linear-gradient(#3b2751, #271739);
-    text-shadow: 0 0 21px rgba(223, 206, 228, 0.5), 0 -1px 0 #311d47;
+.labelLine {
+    margin: auto;
 }
 
-.button:not(.active):hover,
-.button:not(.active):focus {
-    transition: color 200ms linear, text-shadow 500ms linear;
-    color: #fff;
-    text-shadow: 0 0 21px rgba(223, 206, 228, 0.5), 0 0 10px rgba(223, 206, 228, 0.4), 0 0 2px #2a153c;
+.divUnit {
+    width: 45px;
+    /* Ширина */
+    padding: 5px;
 }
 
-.button:not(:hover) {
+.divLine {
+    width: 550px;
+    /* Ширина */
+    text-align: left;
+    padding: 5px;
+    /* Поля */
+    margin: 2px auto;
     transition: 0.6s;
+    -moz-box-sizing: border-box;
+    /* Для Firefox */
+    -webkit-box-sizing: border-box;
+    /* Для Safari и Chrome */
+    box-sizing: border-box;
+    /* Для IE и Opera */
+}
+
+input {
+    width: 200px;
+    font-size: 13px;
+    padding: 7px 0 4px 10px;
+    border: 2px solid #cecece;
+    background: #F6F6f6;
+    border-radius: 8px;
+}
+
+label {
+    font-size: 15px;
+    padding: 7px 0 4px 10px;
 }
