--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,33 +11,26 @@
 
 <body>
 <form role="form" ng-controller="loginController">
-    <div class="loginBlock"> <span class="header">Time For Study</span>
-        <div class="form-group">
-            <label id="phoneLabel" for="inputPhone" class="col-sm-2 control-label">Телефон:</label>
-            <div class="col-sm-4">
-                <input class="form-control" id="inputPhone" placeholder="Phone 7xxxxxxxxxx" ng-model="formInfo.Phone" [(ngModel)]="bill.amount" #amount="ngModel" max="11" required> </div> <span class="errorMessage" ng-show="postResultMessage">{{postResultMessage}}</span> </div>
-        <div class="form-group" ng-show="enterCode">
-            <label id="codeLabel" for="inputPhone" class="col-sm-2 control-label">Код из смс:</label>
-            <div class="col-sm-4">
-                <input class="form-control" id="inputCode" placeholder="" ng-model="formInfo.Code" [(ngModel)]="bill.amount" #amount="ngModel" max="11" required> </div> <span ng-show="phoneRequired">{{phoneRequired}}</span> </div>
-        <div class="form-group" ng-show="registartionFields">
-            <label id="nameLabel" for="inputPhone" class="col-sm-2 control-label">ФИО:</label>
-            <div class="col-sm-4">
-                <input class="form-control" id="inputName" placeholder="" ng-model="formInfo.Code" [(ngModel)]="bill.amount" #amount="ngModel" max="11" required> </div> <span ng-show="phoneRequired">{{phoneRequired}}</span> </div>
-        <div class="form-group" ng-show="registartionFields">
-            <label id="groupLabel" for="inputPhone" class="col-sm-2 control-label">Код из смс:</label>
-            <div class="col-sm-4">
-                <input class="form-control" id="inputGroup" placeholder="" ng-model="formInfo.Code" [(ngModel)]="bill.amount" #amount="ngModel" max="11" required> </div> <span ng-show="phoneRequired">{{phoneRequired}}</span> </div>
-        <div class="form-group" ng-show="openRegistrationButton">
-            <label class="col-sm-2 control-label"> </label>
-            <div class="col-sm-4">
-                <button type="button" ng-click="registrateOpen()" class="btn btn-success">Зарегистрироваться</button>
-            </div>
-        </div>
-        <div class="form-group" ng-show="enterLogin">
-            <label class="col-sm-2 control-label"> </label>
+    <div class="loginBlock">
+        <div class="header">Time For Study</div>
+        <p class="divLine">
+            <label id="phoneLabel" for="inputPhone">Телефон:</label>
+            <input width="100" id="inputPhone" placeholder="Phone 7xxxxxxxxxx" ng-model="formInfo.Phone" [(ngModel)]="bill.amount" #amount="ngModel" max="11" required> <span class="errorMessage" ng-show="postResultMessage">{{postResultMessage}}</span> </p>
+        <p class="divLine" ng-show="enterCode">
+            <label id="codeLabel" for="inputPhone" class="">Код из смс:</label>
+            <input width="300" class="divUnit" id="inputCode" placeholder="" ng-model="formInfo.Code" [(ngModel)]="bill.amount" #amount="ngModel" max="4" required> <span ng-show="phoneRequired">{{phoneRequired}} </span></p>
+        <p class="divLine" ng-show="registartionFields">
+            <label id="nameLabel" for="inputPhone" class="">ФИО:</label>
+            <input class="form-control" id="inputName" placeholder=""> <span ng-show="phoneRequired">{{phoneRequired}}</span> </p>
+        <p class="divLine" ng-show="registartionFields">
+            <label id="groupLabel" for="inputPhone" class="">Код из смс:</label>
+            <input class="form-control" id="inputGroup" placeholder="" ng-model="formInfo.Code" [(ngModel)]="bill.amount" #amount="ngModel" max="11" required> <span ng-show="phoneRequired">{{phoneRequired}}</span> </p>
+        <p class="divLine" ng-show="openRegistrationButton">
+            <button type="button1" ng-click="registrateOpen()">Зарегистрироваться</button>
+        </p>
+        <p class="divLine" ng-show="enterLogin">
             <button class="button1" type="submit" ng-click="login()">{{buttonLabel}}</button>
-        </div>
+        </p>
     </div>
 </form>
 <script src="lib/common/jquery.min.js"></script>
