--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -1,13 +1,7 @@
 /* app css stylesheet */
 
-.outer {
-    /*position: relative;*/
-    /*    content: '';*/
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    vertical-align: middle;
-    background-color: #ffc;
+body{
+    background-color: #CCFFFF;
 }
 
 .loginBlock {
@@ -23,7 +17,7 @@
     height: 200px;
     background: #8ED9B6;
     border-radius: 10px;
-    box-shadow: inset 0 4px 15px rgba(255, 255, 255, 0.2), 0 4px 15px rgba(0, 0, 0, 0.1);
+    box-shadow: inset 5px 5px 5px rgba(255, 255, 255, 0.2), 5px 5px 5px rgba(0, 0, 0, 0.1);
 }
 
 .centerBlock {
@@ -37,6 +31,7 @@
     font-size: 40px;
     margin: 10px auto;
     text-align: center;
+    text-shadow: 1px 2px 3px rgba(5,46,68,0.25);
 }
 
 .errorMessage {
