--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,14 +7,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Time For Study</title>
     <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/app.css" /> </head>
+    <link rel="stylesheet" href="css/app.css" />
+    <script src="lib/jquery/jquery.js"></script>
+    <script src="lib/jquery/jquery.maskedinput.min.js"></script>
+</head>
 <body>
 <form role="form" ng-controller="loginController">
     <div class="loginBlock">
         <div class="header">Time For Study</div>
         <p class="divLine">
             <label id="phoneLabel" for="inputPhone">Телефон:</label>
-            <input id="inputPhone" placeholder="Phone 7xxxxxxxxxx" ng-model="formInfo.Phone" name="phone">
+            <input id="inputPhone" type="text" placeholder="Phone 7xxxxxxxxxx" ng-model="formInfo.Phone" name="phone">
+<!--            <input  id="phone" type="text">-->
+            <script>
+                //Код jQuery, установливающий маску для ввода телефона элементу input
+                //1. После загрузки страницы,  когда все элементы будут доступны выполнить...
+                $(function () {
+                    //2. Получить элемент, к которому необходимо добавить маску
+                    $("#phone").mask("8(999) 999-9999");
+                });
+            </script>
         </p>
         <p class="divLine" ng-show="enterCode">
             <label id="codeLabel" for="inputCode">Код из смс:</label>
@@ -31,13 +43,20 @@
             <button ng-show="enterLogin" class="button1" ng-click="login()">{{buttonLabel}}</button>
         </tr>
     </div>
+
 </form>
-<script src="lib/common/jquery.min.js"></script>
+<!--<script type="text/javascript">-->
+<!--    //Код jQuery, установливающий маску для ввода телефона элементу input-->
+<!--    //1. После загрузки страницы,  когда все элементы будут доступны выполнить...-->
+<!--    -->
+<!--// </script>-->
+<!--<script src="lib/common/jquery.min.js"></script>-->
+<!--<script src="js/jq.js"></script>-->
 <script src="lib/angular/angular.js"></script>
 <script src="lib/angular/angular-route.js"></script>
 <script src="js/app.js"></script>
 <script src="js/services.js"></script>
-<script src="js/controllers.js"></script>
+<script src="js/index-controller.js"></script>
 <script src="js/filters.js"></script>
 <script src="js/directives.js"></script>
 <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
