TFS-209 page for adding university completed

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="icon" href="icon/icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Time For Study</title>
     <link href="css/bootstrap.min.css" rel="stylesheet" />
@@ -13,7 +12,7 @@
 </head>
 <body>
 <form role="form" ng-controller="loginController">
-    <div class="loginBlock">
+    <div class="mainBlock">
         <div class="header">Time For Study</div>
         <p class="divLine">
             <label id="phoneLabel" for="inputPhone">Телефон:</label>
