--- a/src/main/resources/static/css/loginStyle.css
+++ b/src/main/resources/static/css/loginStyle.css
@@ -11,9 +11,7 @@ body{
     position: absolute;
     top: 0;
     right: 0;
-    width: 60%;
-    max-width: 530px;
-    min-width: 450px;
+    width: 530px;
     height: 200px;
     background: #8ED9B6;
     border-radius: 10px;
