--- a/src/main/resources/static/css/mainStyle.css
+++ b/src/main/resources/static/css/mainStyle.css
@@ -12,8 +12,7 @@ body {
     position: absolute;
     top: 0;
     right: 0;
-    max-width: 80%;
-    min-width: 800px;
+    width: 800px;
     height: 680px;
     background: #8ED9B6;
     border-radius: 10px;
