--- a/src/main/resources/static/css/menu.css
+++ b/src/main/resources/static/css/menu.css
@@ -3,8 +3,7 @@
     margin: 0px;
     position: relative;
     background: #339966;
-    min-width: 800px;
-    max-width: 100%;
+    width: 800px;
     box-shadow: inset 1px 0 0 rgba(255, 255, 255, .1), inset -1px 0 0 rgba(255, 255, 255, .1), inset 150px 0 150px -150px rgba(255, 255, 255, .12), inset -150px 0 150px -150px rgba(255, 255, 255, .12);
 }
 
@@ -14,8 +13,7 @@
     position: absolute;
     z-index: 2;
     left: 0;
-    min-width: 800px;
-    max-width: 100%;
+    width: 800px;
     height: 3px;
 }
 
@@ -30,10 +28,11 @@
 }
 
 .menu-main {
-    min-width: 800px;
+    /*min-width: 800px;*/
+    width: 800px;
     list-style: none;
     padding: 0;
-    margin: 10;
+    margin: 10px;
     text-align: center;
     font-size: 15pt;
 }
