--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Time For Study</title>
     <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/loginStyle.css" />
+    <link rel="stylesheet" href="../css/loginStyle.css" />
+<!--    <link rel="stylesheet" href="../static/" />-->
+    <link rel="stylesheet" href="../css/mainStyle.css" />
     <script src="lib/jquery/jquery.js"></script>
     <script src="lib/jquery/jquery.maskedinput.min.js"></script>
 </head>
