--- a/src/main/resources/static/css/mainStyle.css
+++ b/src/main/resources/static/css/mainStyle.css
@@ -1,15 +1,17 @@
 body {
     background-color: #CCFFFF;
     overflow: scroll;
+    position: relative;
 }
 
 .mainBlock {
+    background-color: #CCFFFF;
     vertical-align: middle;
     text-align: center;
     bottom: 0;
     left: 0;
     margin: 80px 10%;
-    position: absolute;
+    position: relative;
     top: 0;
     right: 0;
     width: 950px;
@@ -62,19 +64,20 @@ body {
 .page{
     font-size: 15pt;
     margin-bottom: 30px;
-    width: 95%;
+    width: 99%;
     margin: 0 auto;
     padding: 10px;
     display: none;
-    height: 480px;
+    height: 490px;
     background-color:darkslategrey;
     border-radius: 15px;
+    position: absolute;
 }
 
-.page h2{
+.page h2, h3{
     margin-top: 25px;
     margin-bottom: 25px;
-    height: 40px;
+    height: 50px;
     padding-top: 10px;
     color: dimgrey;
     font-family: "Arial", Georgia, Serif;
