--- a/src/main/resources/static/css/loginStyle.css
+++ b/src/main/resources/static/css/loginStyle.css
@@ -49,6 +49,8 @@ body{
     /* Ширина */
     text-align: left;
     padding: 5px;
+    margin-top: 30px;
+    padding-top: 30px;
     /* Поля */
     margin: 2px auto;
     transition: 0.6s;
