--- a/src/main/resources/static/css/mainStyle.css
+++ b/src/main/resources/static/css/mainStyle.css
@@ -10,8 +10,8 @@ body {
     text-align: center;
     bottom: 0;
     left: 0;
-    margin: 80px 10%;
-    position: relative;
+    margin: 0 50px;
+    /*position: relative;*/
     top: 0;
     right: 0;
     width: 950px;
@@ -24,8 +24,9 @@ body {
     margin-top: 20px;
     color: dimgrey;
     font-family: "Arial", Georgia, Serif;
+    padding-top: 15px;
     font-weight: 600;
-    font-size: 40px;
+    font-size: 45px;
     margin: 20px auto;
     text-align: center;
     text-shadow: 1px 2px 3px rgba(5, 46, 68, 0.25);
@@ -63,15 +64,14 @@ body {
 
 .page{
     font-size: 15pt;
-    margin-bottom: 30px;
-    width: 99%;
+    margin-bottom: 10px;
+    width: 85%;
     margin: 0 auto;
     padding: 10px;
     display: none;
-    height: 490px;
-    background-color:darkslategrey;
+    height: 90%;
+    background-color: #8ED9B6;
     border-radius: 15px;
-    position: absolute;
 }
 
 .page h2, h3{
@@ -79,6 +79,7 @@ body {
     margin-bottom: 25px;
     height: 50px;
     padding-top: 10px;
+    padding-bottom: 20px;
     color: dimgrey;
     font-family: "Arial", Georgia, Serif;
     font-weight: 700;
@@ -89,4 +90,11 @@ body {
     border-radius: 10px;
     background-color:azure;
     text-shadow: 1px 2px 3px rgba(5, 46, 68, 0.25);
+}
+
+.modal{
+    position: absolute;
+    z-index: 100;
+    height: 200px;
+    width: 200px;
 }
