--- a/src/main/resources/static/css/timetable.css
+++ b/src/main/resources/static/css/timetable.css
@@ -23,10 +23,10 @@
     height: 40px;
 }
 
-#timetable div{
+.day {
     padding: 0px; 
     margin-right: 10px;
-/*    margin-top: 35px;*/
+    margin-top: 35px;
     border: 1px solid #fff; 
     background-color: darkkhaki;
     border-radius: 10px;
@@ -52,22 +52,12 @@
     border-radius: 10px;
 }
 
-#timetable li{
+.day li{
     font-size: 13pt;
     list-style-type: none;
+    padding: 0 2px;
 }
-
-.modal{
-/*
-    height: 500px;
-    width: 300pxl
-    padding: 30px;
-    position:absolute; 
-    z-index: 10; 
-    display: block; 
-    height: 200px; 
-    width: 200px; 
-    top:20%; 
-    left: 30%;
-*/
+.week-number-cell{
+    /*background-color:;*/
+    display: block;
 }
