--- a/src/main/resources/static/css/mainStyle.css
+++ b/src/main/resources/static/css/mainStyle.css
@@ -14,22 +14,33 @@ body {
     /*position: relative;*/
     top: 0;
     right: 0;
-    width: 950px;
+    width: 80%;
     background: #8ED9B6;
+    height: 90%;
     border-radius: 10px;
     box-shadow: inset 5px 5px 5px rgba(255, 255, 255, 0.2), 5px 5px 5px rgba(0, 0, 0, 0.1);
 }
 
-.header {
+.header span{
     margin-top: 20px;
-    color: dimgrey;
+    /*color: dimgrey;*/
     font-family: "Arial", Georgia, Serif;
-    padding-top: 15px;
+    padding: 15px;
     font-weight: 600;
-    font-size: 45px;
-    margin: 20px auto;
+    font-size: 50px;
+    /*margin: 20px auto;*/
     text-align: center;
-    text-shadow: 1px 2px 3px rgba(5, 46, 68, 0.25);
+    text-shadow: 1px 8px 3px rgba(5, 46, 68, 0.25);
+    color: black;
+    /*padding: 10px;*/
+}
+
+.header div {
+    margin-top: 15px;
+    display: inline-block;
+    opacity: 0.3;
+    background-color: #adadad;
+    border-radius: 20px;
 }
 
 .button {
@@ -39,7 +50,7 @@ body {
     -webkit-box-shadow: inset 0 3px 0 rgba(255, 255, 255, 0.2), 0 2px 5px rgba(0, 0, 0, 0.08);
     -moz-box-shadow: inset 0 3px 0 rgba(255, 255, 255, 0.2), 0 2px 5px rgba(0, 0, 0, 0.08);
     box-shadow: inset 0 3px 0 rgba(255, 255, 255, 0.2), 0 2px 5px rgba(0, 0, 0, 0.08);
-    color: #fff;
+    /*color: #fff;*/
     display: table-cell;
     width: 200px;
     height: 40px;
@@ -47,8 +58,6 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
     padding: 5px 5px;
-    /*margin: 5px auto;*/
-    /*text-decoration: none;*/
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
     -webkit-transition: background-color 0.1s linear;
     -moz-transition: background-color 0.1s linear;
@@ -64,9 +73,8 @@ body {
 
 .page{
     font-size: 15pt;
-    margin-bottom: 10px;
-    width: 85%;
-    margin: 0 auto;
+    width: 95%;
+    margin: 0 auto 10px;
     padding: 10px;
     display: none;
     height: 90%;
@@ -75,13 +83,11 @@ body {
 }
 
 .page h2, h3{
-    margin-top: 25px;
-    margin-bottom: 25px;
     height: 50px;
     padding-top: 10px;
     padding-bottom: 20px;
     color: dimgrey;
-    font-family: "Arial", Georgia, Serif;
+    font-family: "Arial", Georgia, Serif, serif;
     font-weight: 700;
     font-size: 30px;
     margin: 0px auto;
