--- a/src/main/resources/static/css/menu.css
+++ b/src/main/resources/static/css/menu.css
@@ -3,7 +3,7 @@
     margin: 0px;
     position: relative;
     background: #339966;
- width: 950px;
+    width: 100%;
     box-shadow: inset 1px 0 0 rgba(255, 255, 255, .1), inset -1px 0 0 rgba(255, 255, 255, .1), inset 150px 0 150px -150px rgba(255, 255, 255, .12), inset -150px 0 150px -150px rgba(255, 255, 255, .12);
 }
 
@@ -12,19 +12,19 @@
     content: "";
     position: absolute;
     z-index: 2;
-    left: 10;
-  width: 950px;
+    left: 10px;
+    width: 100%;
     height: 3px;
 }
 
 .top-menu:before {
     top: 0;
-    border-bottom: 1px dashed rgba(255, 255, 255, .2);
+    border-bottom: 3px dashed rgba(255, 255, 255, .2);
 }
 
 .top-menu:after {
     bottom: 0;
-    border-top: 1px dashed rgba(255, 255, 255, .2);
+    border-top: 3px dashed rgba(255, 255, 255, .2);
 }
 
 .top-menu input{
@@ -32,7 +32,7 @@
 }
 
 .menu-main {
-    width: 900px;
+    width: 100%;
     list-style: none;
     padding: 0;
     margin: 10px;
@@ -44,7 +44,7 @@
 .menu-main:after {
     content: "";
     position: absolute;
-    width: 65px;
+    width: 85px;
     height: 0;
     top: 8px;
     border-top: 18px solid #339966;
@@ -65,16 +65,18 @@
 
 .menu-main li {
     display: inline-block;
-    margin-right: -4px;
+    margin-right: 4px;
 }
 
 .menu-main label {
     text-decoration: none;
     display: inline-block;
-    padding: 8px 18px;
+    padding: 8px 28px;
     font-family: 'PT Sans Caption', sans-serif;
     color: white;
     transition: .3s linear;
+    vertical-align: center;
+    height: 100%;
 }
 
 .menu-main label.current,
