--- a/src/main/resources/static/css/timetable.css
+++ b/src/main/resources/static/css/timetable.css
@@ -11,7 +11,6 @@
 #timetable h2{
     margin-bottom: 3px;
     width: 350px;
-    height: 45px;
     height: 50px;
 }
 
@@ -31,6 +30,7 @@
     background-color: darkkhaki;
     border-radius: 10px;
     height: auto;
+    width: 160px;
     vertical-align: top;
 }
 
@@ -39,6 +39,7 @@
     margin-top: 20px;
     padding-left: 10px;
     padding-right: 10px;
+    margin-bottom: 5px;
 }
 
 .dayName{
@@ -53,11 +54,24 @@
 }
 
 .day li{
+    max-height: 60px;
     font-size: 13pt;
     list-style-type: none;
     padding: 0 2px;
+    white-space: nowrap; /* Запрещаем перенос строк */
+    overflow: hidden; /* Обрезаем все, что не помещается в область */
+    text-overflow: ellipsis; /* Добавляем многоточие */
 }
 .week-number-cell{
     /*background-color:;*/
     display: block;
+}
+
+.day p{
+    font-size: 15pt;
+    white-space: nowrap; /* Запрещаем перенос строк */
+    overflow: hidden; /* Обрезаем все, что не помещается в область */
+    background: #fc0; /* Цвет фона */
+    padding: 5px; /* Поля вокруг текста */
+    text-overflow: ellipsis; /* Добавляем многоточие */
 }
