TFS-216 stable addLessonForm.html

--- a/src/main/resources/static/css/timetable.css
+++ b/src/main/resources/static/css/timetable.css
@@ -29,8 +29,8 @@
     border: 1px solid #fff; 
     background-color: darkkhaki;
     border-radius: 10px;
-    height: auto;
-    width: 160px;
+    /*height: auto;*/
+    width: 190px;
     vertical-align: top;
 }
 
