--- a/src/main/resources/static/css/mainStyle.css
+++ b/src/main/resources/static/css/mainStyle.css
@@ -5,15 +5,11 @@ body {
 }
 
 .mainBlock {
-    background-color: #CCFFFF;
     vertical-align: middle;
     text-align: center;
-    bottom: 0;
-    left: 0;
-    margin: 0 50px;
-    /*position: relative;*/
-    top: 0;
-    right: 0;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
     width: 80%;
     background: #8ED9B6;
     height: 90%;
@@ -23,7 +19,7 @@ body {
 
 .header span{
     margin-top: 20px;
-    /*color: dimgrey;*/
+    color: white;
     font-family: "Arial", Georgia, Serif;
     padding: 15px;
     font-weight: 600;
@@ -31,14 +27,15 @@ body {
     /*margin: 20px auto;*/
     text-align: center;
     text-shadow: 1px 8px 3px rgba(5, 46, 68, 0.25);
-    color: black;
+    opacity: 0.8;
+    /*color: black;*/
     /*padding: 10px;*/
 }
 
 .header div {
     margin-top: 15px;
     display: inline-block;
-    opacity: 0.3;
+    /*opacity: 0.2;*/
     background-color: #adadad;
     border-radius: 20px;
 }
@@ -74,12 +71,13 @@ body {
 .page{
     font-size: 15pt;
     width: 95%;
-    margin: 0 auto 10px;
+    margin: 0 auto 50px;
     padding: 10px;
     display: none;
     height: 90%;
     background-color: #8ED9B6;
     border-radius: 15px;
+    padding-bottom: 20px;
 }
 
 .page h2, h3{
@@ -103,4 +101,25 @@ body {
     z-index: 100;
     height: 200px;
     width: 200px;
+}
+
+.popup {
+    position: fixed;
+    top: 35%;
+    left: 30%;
+    text-align: center;
+    vertical-align: center;
+    padding: 20px;
+    width: auto;
+    margin-left: 20px;
+    background: #fff;
+    border: 1px solid black;
+    border-radius: 20px;
+    z-index: 99999;
+    opacity: 1;
+}
+.popup-close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
