--- a/src/main/resources/static/css/menu.css
+++ b/src/main/resources/static/css/menu.css
@@ -47,8 +47,8 @@
     width: 85px;
     height: 0;
     top: 8px;
-    border-top: 18px solid #339966;
-    border-bottom: 18px solid #339966;
+    border-top: 18px solid inherit;
+    border-bottom: 18px solid inherit;
     transform: rotate(360deg);
     z-index: -1;
 }
@@ -66,6 +66,8 @@
 .menu-main li {
     display: inline-block;
     margin-right: 4px;
+    margin-top: 2px;
+    margin-bottom: 2px;
 }
 
 .menu-main label {
