--- a/src/main/resources/static/css/mainStyle.css
+++ b/src/main/resources/static/css/mainStyle.css
@@ -12,7 +12,8 @@ body {
     margin-right: auto;
     width: 80%;
     background: #8ED9B6;
-    height: 90%;
+    min-height: 800px;
+    max-height: 90%;
     border-radius: 10px;
     box-shadow: inset 5px 5px 5px rgba(255, 255, 255, 0.2), 5px 5px 5px rgba(0, 0, 0, 0.1);
 }
@@ -74,7 +75,7 @@ body {
     margin: 0 auto 50px;
     padding: 10px;
     display: none;
-    height: 90%;
+    min-height: 780px;
     background-color: #8ED9B6;
     border-radius: 15px;
     padding-bottom: 20px;
@@ -106,12 +107,13 @@ body {
 .popup {
     position: fixed;
     top: 35%;
-    left: 30%;
+    margin-left: auto;
+    margin-right: auto;
     text-align: center;
     vertical-align: center;
     padding: 20px;
     width: auto;
-    margin-left: 20px;
+    /*margin-left: 20px;*/
     background: #fff;
     border: 1px solid black;
     border-radius: 20px;
