--- a/src/main/resources/static/css/addLessonForm.css
+++ b/src/main/resources/static/css/addLessonForm.css
@@ -1,7 +1,17 @@
 .groupAddBlock{
-    display: block;
-    background-color: #5cb85c;
+    display: inline-block;
+    /*background-color: #5cb85c;*/
     width: 650px;
+    border-color: black;
+    top: 0;
+    text-align: center;
+    height: 460px;
+    border-radius: 25px;
+    bottom: 0;
+    left: 0;
+    /*margin: 20px auto 0;*/
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .groupAddBlock-field p{
@@ -15,5 +25,9 @@
 }
 
 .groupAddBlock ul{
+
+}
+
+.groupAddBlock table{
 
 }
