--- a/src/main/resources/static/css/mainStyle.css
+++ b/src/main/resources/static/css/mainStyle.css
@@ -10,7 +10,7 @@ body {
     margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
-    width: 80%;
+    width: 90%;
     background: #8ED9B6;
     min-height: 800px;
     max-height: 90%;
@@ -75,14 +75,14 @@ body {
     margin: 0 auto 50px;
     padding: 10px;
     display: none;
-    min-height: 780px;
+    min-height: 450px;
     background-color: #8ED9B6;
     border-radius: 15px;
     padding-bottom: 20px;
 }
 
 .page h2, h3{
-    height: 50px;
+    height: 30px;
     padding-top: 10px;
     padding-bottom: 20px;
     color: dimgrey;
@@ -107,6 +107,7 @@ body {
 .popup {
     position: fixed;
     top: 35%;
+    left: 30%;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
