--- a/src/main/resources/static/css/mainStyle.css
+++ b/src/main/resources/static/css/mainStyle.css
@@ -18,13 +18,17 @@ body {
     box-shadow: inset 5px 5px 5px rgba(255, 255, 255, 0.2), 5px 5px 5px rgba(0, 0, 0, 0.1);
 }
 
-.header span{
+.header{
+    display: inline-block;
+    width: 100%;
     margin-top: 20px;
     color: white;
     font-family: "Arial", Georgia, Serif;
     padding: 15px;
     font-weight: 600;
     font-size: 50px;
+    height: 50px;
+    vertical-align: center;
     /*margin: 20px auto;*/
     text-align: center;
     text-shadow: 1px 8px 3px rgba(5, 46, 68, 0.25);
@@ -33,12 +37,18 @@ body {
     /*padding: 10px;*/
 }
 
-.header div {
-    margin-top: 15px;
+.universityNameHeader {
+    color: white;
+    width: 80%;
+    /*max-width: 750px;*/
+    height: 50px;
     display: inline-block;
-    /*opacity: 0.2;*/
-    background-color: #adadad;
-    border-radius: 20px;
+    font-size: 18pt;
+    text-align: center;
+    text-shadow: 1px 8px 3px rgba(5, 46, 68, 0.25);
+    opacity: 0.8;
+    padding: 0px;
+    text-align: center;
 }
 
 .button {
@@ -73,12 +83,11 @@ body {
     font-size: 15pt;
     width: 95%;
     margin: 0 auto 50px;
-    padding: 10px;
     display: none;
     min-height: 450px;
     background-color: #8ED9B6;
     border-radius: 15px;
-    padding-bottom: 20px;
+    padding: 10px 10px 20px;
 }
 
 .page h2, h3{
@@ -95,13 +104,6 @@ body {
     border-radius: 10px;
     background-color:azure;
     text-shadow: 1px 2px 3px rgba(5, 46, 68, 0.25);
-}
-
-.modal{
-    position: absolute;
-    z-index: 100;
-    height: 200px;
-    width: 200px;
 }
 
 .popup {
@@ -126,3 +128,4 @@ body {
     top: 10px;
     right: 10px;
 }
+
