--- a/src/main/resources/static/css/searchStyle.css
+++ b/src/main/resources/static/css/searchStyle.css
@@ -1,5 +1,6 @@
 .filters{
-    margin-top: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     display: inline-block;
     border-color: black;
     background-color: white;
@@ -10,23 +11,24 @@
 .filter-button{
     width: auto;
     /*display: inline-block;*/
-    -webkit-writing-mode: horizontal-tb !important;
-    -webkit-appearance: button;
+    /*-webkit-writing-mode: horizontal-tb !important;*/
+    /*-webkit-appearance: button;*/
     background-color: white;
     /*border-color: rgb(216, 216, 216) rgb(209, 209, 209) rgb(186, 186, 186);*/
-    border-style: solid;
+    border-style: none;
     border-radius: 5px;
-    border-width: 1px;
+    border-width: 2px;
     padding: 1px 7px 2px;
-    text-rendering: auto;
-    color: initial;
+    /*text-rendering: auto;*/
+    /*color: initial;*/
     text-align: start;
     margin: 0em;
     font: 400 17px system-ui;
 }
 
 .search-input{
+    margin-top: 20px;
     width: 250px;
-    height: 20px;
+    height: 25px;
     font-size: 20pt;
 }
